--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,61 +1,77 @@
 <!DOCTYPE html>
-<html ng-app ="angularTable">
+<html ng-app="angularTable">
 <head>
-	<meta charset="utf-8" />
-	<title></title>
-	<script>document.write('<base href="' + document.location + '" />');</script>
-   
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
-    
-    <script type= "text/javascript" src="js/app.js"></script>
+<meta charset="utf-8" />
+<title></title>
+<script>document.write('<base href="' + document.location + '" />');</script>
+
+<link
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+	integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+	crossorigin="anonymous">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
+
+<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body ng-controller="listdata">
 	<div>
-			<div class="col-lg-8">
-					<h2>Employees and Certificates </h2>
-					<div>
-    				<i class="fa fa-search left-icon"></i> 
-    				<input placeholder="Search here" ng-model="searchInputVal"/> 
-    				<i ng-class="{'fa' : true, 'fa-close' : true, 'right-icon' : true, active : (searchInputVal.length > 0)}" ng-click="searchInputVal = ''"></i>
-				</div>
-				<div>
+		<div class="col-lg-8">
+			<h2>Employees and Certificates</h2>
+			<div>
+				<i class="fa fa-search left-icon"></i> <input
+					placeholder="Search here" ng-model="searchInputVal" /> <i
+					ng-class="{'fa' : true, 'fa-close' : true, 'right-icon' : true, active : (searchInputVal.length > 0)}"
+					ng-click="searchInputVal = ''"></i>
+			</div>
+			<div>
 				</br>
-					<table class = "table table-bordered table-striped">
-						<thead>
-							<tr>
-								<td>Id</td>
-								<td>
-								<a href="#" ng-click= "sortType='name'; sortReverse= !sortReverse">
-								Employee Name
-								<span ng-show = "sortType == 'name' && !sortReverse" class = "fa fa-caret-down"></span>
-								<span ng-show = "sortType == 'name' && sortReverse" class = "fa fa-caret-up"></span>
-								</a>
-								</td>
-								<td>Certificate Name</td>
-								<td>Expiry Date</td>
-								<td>Certificate</td>
-							</tr>
-						</thead> 
-						<tbody>
-							<tr ng-repeat="user in reportData | orderBy:sortType:sortReverse | filter:searchInputVal">
-								<td>{{user.id}}</td>
-								<td>{{user.name}}</td>
-								<td>{{user.certificate_name}}</td>
-								<!--  <td>{{user.expiry_date}} <span ng-if= "(user.expiry_date | date:'MM/dd/yyyy') == (date | date:'MM/dd/yyyy')" class="fas fa-exclamation-triangle""></span></td>  -->
-								<!-- <td ng-class = "(user.expiry_date | date:'MM/dd/yyyy') < (warndate | date:'MM/dd/yyyy') ? 'text-danger': 'text-primary'">{{user.expiry_date}}</td> -->
-								 <td ng-class = "(user.expiry_date | date:'MM/dd/yyyy') < (date | date:'MM/dd/yyyy') ? 'text-danger': ((user.expiry_date | date:'MM/dd/yyyy') < (warndate | date:'MM/dd/yyyy') ? 'text-warning': 'text-primary')">{{user.expiry_date}}</td>			
-								<!-- <td><a href ng-click="window.open('json/demo.json')"></a> <span class="far fa-file"></span></a></td>		-->	
-								<!--<td><button type="button" class="btn btn-default"><a href ="json/1. Yang and Patel.pdf"> <i class="far fa-file" title="File"></i> </a></button></td>-->
-							    <td><button type="button" class="btn btn-default"><a href ="file:///Users/ashishkhetan/Desktop/1.%20Yang%20and%20Patel.pdf"> <i class="far fa-file" title="File"></i> </a></button></td>
-							
-							</tr>
-						</tbody>
-                    </table>
-                      <hr>
-                </div>
-            </div>
+				<table class="table table-bordered table-striped">
+					<thead>
+						<tr>
+							<td>Id</td>
+							<td><a href="#"
+								ng-click="sortType='name'; sortReverse= !sortReverse">
+									Employee Name <span
+									ng-show="sortType == 'name' && !sortReverse"
+									class="fa fa-caret-down"></span> <span
+									ng-show="sortType == 'name' && sortReverse"
+									class="fa fa-caret-up"></span>
+							</a></td>
+							<td>Certificate Name</td>
+							<td>Expiry Date</td>
+							<td>Certificate</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr
+							ng-repeat="user in reportData | orderBy:sortType:sortReverse | filter:searchInputVal">
+							<td>{{user.id}}</td>
+							<td>{{user.name}}</td>
+							<td>{{user.certificate_name}}</td>
+							<!--  <td>{{user.expiry_date}} <span ng-if= "(user.expiry_date | date:'MM/dd/yyyy') == (date | date:'MM/dd/yyyy')" class="fas fa-exclamation-triangle""></span></td>  -->
+							<!-- <td ng-class = "(user.expiry_date | date:'MM/dd/yyyy') < (warndate | date:'MM/dd/yyyy') ? 'text-danger': 'text-primary'">{{user.expiry_date}}</td> -->
+							<td
+								ng-class="(user.expiry_date | date:'MM/dd/yyyy') < (date | date:'MM/dd/yyyy') ? 'text-danger': ((user.expiry_date | date:'MM/dd/yyyy') < (warndate | date:'MM/dd/yyyy') ? 'text-warning': 'text-primary')">{{user.expiry_date}}</td>
+							<!-- <td><a href ng-click="window.open('json/demo.json')"></a> <span class="far fa-file"></span></a></td>		-->
+							<!--<td><button type="button" class="btn btn-default"><a href ="json/1. Yang and Patel.pdf"> <i class="far fa-file" title="File"></i> </a></button></td>-->
+							<td><button type="button" class="btn btn-default">
+									<a href="file:///Users/ashishkhetan/Desktop/1.%20Yang%20and%20Patel.pdf">
+										<i class="far fa-file" title="File"></i>
+									</a>
+								</button></td>
+
+						</tr>
+					</tbody>
+				</table>
+				<hr>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
